@@ -118,6 +118,20 @@ Date when the  person was entered into LedgerSMB
 
 has 'created' => (is => 'rw', coerce => 1, isa => 'LedgerSMB::Moose::Date');
 
+=item birthdate
+
+Date of birth.  Optional
+
+=item personal_id
+
+Personal id, such as a passport or other government-issued or other ID.
+
+=cut
+
+has 'birthdate' => (is => 'rw', coerce => 1, isa => 'LedgerSMB::Moose::Date');
+has 'personal_id' => (is => 'ro', isa => 'Str');
+
+
 =head1 METHODS
 
 =over
