@@ -132,6 +132,30 @@
 	} ?> 
 </div>
 </div>
+<div class="input_line">
+<div class="input_group1">
+    <?lsmb INCLUDE input element_data = {
+           name  = 'personal_id',
+           type  = 'text',
+           size  = '20',
+           value = person.personal_id,
+           label = text('Personal ID'), #'
+           class = 'id',
+    } ?>
+</div>
+</div>
+<div class="input_line">
+<div class="input_group1">
+    <?lsmb INCLUDE input element_data = {
+           name  = 'birthdate',
+           type  = 'text',
+           value = person.birthdate,
+           label = text('Birthdate'),
+           size  = '11',
+           class = 'date',
+    } ?>
+</div>
+</div>
 </div>
 <div class="input_line">
             <hr/>
