@@ -31,14 +31,17 @@ CREATE TYPE person_entity AS (
     first_name text,
     middle_name text,
     last_name text,
-    entity_class int
+    entity_class int,
+    birthdate date,
+    personal_id text
 );
 
 CREATE FUNCTION person__get(in_entity_id int)
 RETURNS person_entity AS
 $$
 SELECT e.id, e.control_code, e.name, e.country_id, c.name, 
-       p.first_name, p.middle_name, p.last_name, e.entity_class
+       p.first_name, p.middle_name, p.last_name, e.entity_class,
+       p.birthdate, p.personal_id
   FROM entity e
   JOIN country c ON c.id = e.country_id
   JOIN person p ON p.entity_id = e.id
@@ -49,7 +52,8 @@ CREATE FUNCTION person__get_by_cc(in_control_code text)
 RETURNS person_entity AS
 $$
 SELECT e.id, e.control_code, e.name, e.country_id, c.name, 
-       p.first_name, p.middle_name, p.last_name, e.entity_class
+       p.first_name, p.middle_name, p.last_name, e.entity_class,
+       p.birthdate, p.personal_id
   FROM entity e
   JOIN country c ON c.id = e.country_id
   JOIN person p ON p.entity_id = e.id
@@ -63,10 +67,11 @@ $$ SELECT * FROM salutation ORDER BY id ASC $$ language sql;
 COMMENT ON FUNCTION person__list_salutations() IS
 $$ Returns a list of salutations ordered by id.$$; 
 
+DROP FUNCTION IF EXISTS person__save (int, int, text, text, text, int);
 CREATE OR REPLACE FUNCTION person__save
 (in_entity_id integer, in_salutation_id int, 
 in_first_name text, in_middle_name text, in_last_name text,
-in_country_id integer
+in_country_id integer, in_birthdate date, in_personal_id text
 )
 RETURNS INT AS $$
 
@@ -98,7 +103,9 @@ RETURNS INT AS $$
             salutation_id = in_salutation_id,
             first_name = in_first_name,
             last_name = in_last_name,
-            middle_name = in_middle_name
+            middle_name = in_middle_name,
+            birthdate = in_birthdate,
+            personal_id = in_personal_id
     WHERE
             entity_id = in_entity_id;
     IF FOUND THEN
@@ -106,8 +113,10 @@ RETURNS INT AS $$
     ELSE 
         -- Do an insert
         
-        INSERT INTO person (salutation_id, first_name, last_name, entity_id)
-	VALUES (in_salutation_id, in_first_name, in_last_name, e_id);
+        INSERT INTO person (salutation_id, first_name, last_name, entity_id,
+                           birthdate, personal_id)
+	VALUES (in_salutation_id, in_first_name, in_last_name, e_id,
+                in_birthdate, in_personal_id);
 
         RETURN e_id;
     
@@ -118,7 +127,7 @@ $$ language plpgsql;
 COMMENT ON FUNCTION person__save
 (in_entity_id integer, in_salutation_id int, 
 in_first_name text, in_middle_name text, in_last_name text,
-in_country_id integer
+in_country_id integer, in_birthdate date, in_personal_id text
 ) IS
 $$ Saves the person with the information specified.  Returns the entity_id
 of the record saved.$$;
